--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{{ 'error_page.title' | trans }} - {{ status_code ?? {{ 'error_page.title_defaults' | trans }} }}{% endblock %}
+{% block title %}{{ 'error_page.title' | trans }} - {{ status_code ?? ('error_page.title_defaults' | trans) }}{% endblock %}
 {#{% block title %}greshka{% endblock %}#}
 
 {% block body %}
@@ -31,24 +31,24 @@
                     </div>
                     <h1 class="display-1 mb-4" style="color: #d4a373; font-weight: bold;">{{ status_code ?? '500' }}</h1>
 {#                    <h2 class="mb-4">{{ status_text ?? 'Възникна грешка' }}</h2>#}
-                    <h2 class="mb-4">{{ status_text ?? {{ 'error_page.status_text' | trans }} }}</h2>
+                    <h2 class="mb-4">{{ status_text ?? ('error_page.status_text' | trans) }}</h2>
                     <p class="lead mb-4">
 {#                        Съжаляваме, но възникна неочаквана грешка.#}
-                        {{ 'error_page.description' | trans }} }}
+                        {{ 'error_page.description' | trans }}
                     </p>
                     <p class="text-muted mb-5">
 {#                        Моля, опитайте отново по-късно или се свържете с нас, ако проблемът продължава.#}
-                        {{ 'error_page.advise' | trans }} }}
+                        {{ 'error_page.advise' | trans }}
                     </p>
                     <div class="mt-5">
                         <a href="{{ path('main') }}" class="btn btn-primary btn-lg mr-3">
 {#                            <i class="fas fa-home"></i> Към началната страница#}
-                            <i class="fas fa-home"></i> {{ 'error_page.button_start' | trans }} }}
+                            <i class="fas fa-home"></i> {{ 'error_page.button_start' | trans }}
                         </a>
                         {% if app.user %}
                             <a href="{{ path('profile_edit', {id: app.user.id}) }}" class="btn btn-outline-secondary btn-lg">
 {#                                <i class="fas fa-user"></i> Към профила#}
-                                <i class="fas fa-user"></i> {{ 'error_page.button_profile' | trans }} }}
+                                <i class="fas fa-user"></i> {{ 'error_page.button_profile' | trans }}
                             </a>
                         {% endif %}
                     </div>
