--- a/templates/email/password_reset.html.twig
+++ b/templates/email/password_reset.html.twig
@@ -1,30 +1,30 @@
 {% extends 'email/base.html.twig' %}
 
-{% block title %}Възстановяване на парола{% endblock %}
+{% block title %}{{ 'password_reset.title' | trans }}{% endblock %}
 
-{% block header %}Възстановяване на парола{% endblock %}
+{% block header %}{{ 'password_reset.header' | trans }}{% endblock %}
 
 {% block body %}
-    <h2>Здравейте{% if user.firstName %}, {{ user.firstName }}{% endif %}!</h2>
+    <h2>{{ 'password_reset.hello' | trans }}{% if user.firstName %}, {{ user.firstName }}{% endif %}!</h2>
 
-    <p>Получихме заявка за възстановяване на паролата за вашия акаунт.</p>
+    <p>{{ 'password_reset.request_received' | trans }}</p>
 
-    <p>За да зададете нова парола, моля кликнете на бутона по-долу:</p>
+    <p>{{ 'password_reset.instructions' | trans }}</p>
 
     <div style="text-align: center;">
         <a href="{{ url('app_reset_password', {token: resetToken}) }}" class="button">
-            Възстановете паролата
+            {{ 'password_reset.button' | trans }}
         </a>
     </div>
 
-    <p>Ако бутонът не работи, копирайте и поставете следния линк в браузъра си:</p>
+    <p>{{ 'password_reset.link_help' | trans }}</p>
     <p style="word-break: break-all; color: #7f8c8d; font-size: 14px;">
         {{ url('app_reset_password', {token: resetToken}) }}
     </p>
 
-    <p><strong>Важно:</strong> Този линк е валиден за 1 час. След това ще трябва да поискате нов.</p>
+    <p><strong>{{ 'password_reset.important' | trans }}:</strong> {{ 'password_reset.link_expiry' | trans }}</p>
 
     <hr style="border: none; border-top: 1px solid #e0e0e0; margin: 30px 0;">
 
-    <p>Ако не сте поискали възстановяване на парола, моля игнорирайте този имейл. Вашата парола няма да бъде променена.</p>
+    <p>{{ 'password_reset.ignore' | trans }}</p>
 {% endblock %}
